--- a/Sevenminuitworkout/app/src/main/res/layout/activity_exercise.xml
+++ b/Sevenminuitworkout/app/src/main/res/layout/activity_exercise.xml
@@ -170,11 +170,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvExerciseStatus"
-        android:layout_margin="5dp"
-        tools:listitem="@layout/item_exercise_status"
-        app:layout_constraintTop_toBottomOf="@id/flExerciseView"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/flExerciseView"
+        app:layout_constraintVertical_bias="0.2"
+        tools:layout_editor_absoluteX="4dp"
+        tools:listitem="@layout/item_exercise_status" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
