--- a/Sevenminuitworkout/app/src/main/res/layout/activity_bmi.xml
+++ b/Sevenminuitworkout/app/src/main/res/layout/activity_bmi.xml
@@ -88,7 +88,7 @@
             android:textSize="16sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!--<com.google.android.material.textfield.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilUsMetricUnitWeight"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
@@ -105,7 +105,7 @@
             android:hint="WEIGHT (in kg)"
             android:inputType="numberDecimal"
             android:textSize="16sp" />
-    </com.google.android.material.textfield.TextInputLayout>-->
+    </com.google.android.material.textfield.TextInputLayout>
     <!-- positioned below tilMetricUnitWeight -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilMetricUsUnitHeightFeet"
