--- a/Happy Places/app/src/main/res/layout/activity_main.xml
+++ b/Happy Places/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/fabAddHappyPlace"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/baseline_add_24"
+        app:icon="@drawable/baseline_add_24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
